# claude-skills

./: .gitignore  .gitmodules  README.md  cfp-study  codebase-to-course  conf-papers  docx  extract-paper-images  ielts  ielts-dashboard  ielts-diagnosis  ielts-listening  ielts-reading  ielts-speaking  ielts-vocab  ielts-writing  karpathy-guidelines  notion-cli  paper-analyze  paper-search  pdf  pptx  start-my-day  tutor  tutor-setup  update-all-skills.sh  xlsx
archive/: SKILL.md  evals.md  memory.md
cfp-study/: CLAUDE.md  README.md  SKILL.md  evals.md  memory.md
codebase-to-course/: SKILL.md  evals.md  memory.md
conf-papers/: SKILL.md  evals.md  memory.md
conversation-archive/: SKILL.md  evals.md  memory.md
defuddle/: evals.md  memory.md
design-skill/: SKILL.md  evals.md  memory.md
docx/: evals.md  memory.md
excalidraw-diagram/: evals.md  memory.md
extract-paper-images/: evals.md  memory.md
find-skills/: evals.md  memory.md
follow-builders/: README.md  README.zh-CN.md  SKILL.md  evals.md  feed-blogs.json  feed-podcasts.json  feed-x.json  memory.md  state-feed.json
frontend-slides/: evals.md  memory.md
good-morning/: SKILL.md  evals.md  memory.md
humanizer/: SKILL.md  evals.md  memory.md
ielts-dashboard/: SKILL.md  evals.md  memory.md
ielts-diagnosis/: SKILL.md  evals.md  memory.md
ielts-listening/: SKILL.md  (+2 more)
slack-gif-creator/: .gitignore  .pre-commit-config.yaml  README.md  SKILL.md  evals.md  memory.md  pyproject.toml
slack-gif-creator/src/: main.py  proxy.py
slack-gif-creator/src/agent/: agent_entrypoint.py  slack_tool_logger.py
(+95 files in other folders)
